# autoseg

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/: .gitkeep
backend/: config.py  main.py  requirements.txt
backend/api/: annotations.py  export.py  files.py  images.py  labels.py  ml.py  projects.py
core/: __init__.py  db.py  export_yolo.py  masks.py  models.py  polygons.py  store.py  validate.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/AnnotationList/: AnnotationList.tsx
frontend/src/components/Canvas/: ImageCanvas.tsx
frontend/src/components/FolderBrowser/: FolderBrowser.tsx
frontend/src/components/LabelPicker/: LabelPicker.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/LoadingOverlay/: LoadingOverlay.tsx
frontend/src/components/Modals/: CreateProjectModal.tsx  ExportModal.tsx  OpenProjectModal.tsx  SettingsModal.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/stores/: annotationStore.ts  projectStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: rle.ts
ml/: __init__.py  embed.py  models_config.py  propagate.py  segment.py
scripts/: debug_embeddings.py  debug_propagate.py  export_yolo.py  verify_yolo_seg.py
tests/: __init__.py  test_basic.py  test_masks.py  test_polygons.py  test_propagate.py  test_store_roundtrip.py
